<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/MyApplications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myApplications"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
        <TextView

            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:layout_marginTop="60sp"
            android:layout_marginBottom="-120sp"/>



        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="130dp"
            android:text="@string/input"
            android:textAlignment="center"/>
        <TextView

            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"/>

        <Button
            android:id="@+id/buttonon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginRight="140dp"
            android:text="@string/enter"
            android:layout_marginTop="40dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your"
                android:textAlignment="center"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/nameResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="80dp"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creater"
            android:textAlignment="center"
            android:layout_marginTop="170dp"/>
    </LinearLayout>
</FrameLayout>